--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,8 @@ button:hover {
     .logo img {
         order: -1;
         margin-bottom: 2px; 
+        height: 50px;
+        width: 50px;
     }
     h1 {
         margin-left: 25%; 
