--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,44 @@ h1 {
     margin-bottom: 2vw; /* Ajusta el espacio entre los elementos usando unidades de vista */
 }
 
-.normal:hover,
-.pro:hover,
-.premium:hover {
+/*NORMAL*/
+.normal {
+    box-shadow: 5px 5px 5px #D4AF37;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+
+.normal:hover {
     box-shadow: 10px 10px 10px #D4AF37;
     border-radius: 20px;
-    height: 30vw; /* Ajusta el alto utilizando unidades de vista */
-    width: 90%; /* Ajusta el ancho utilizando porcentaje */
+    height: 310px;
+    width: 150px;
+}
+
+/*PRO*/
+.pro {
+    box-shadow: 5px 5px 5px #3fc4e9;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+.pro:hover {
+    box-shadow: 10px 10px 10px #3fc4e9;
+    border-radius: 20px;
+    height: 310px;
+    width: 150px;
+}
+
+/*PREMIUM*/
+.premium {
+    box-shadow: 5px 5px 5px #ae52b0;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+.premium:hover {
+    box-shadow: 10px 10px 10px #ae52b0;
+    border-radius: 20px;
+    height: 310px;
+    width: 150px;
 }
 
 .plan {
