--- a/styles.css
+++ b/styles.css
@@ -154,5 +154,44 @@ button:hover {
         width: 90%;
         margin-top: 10%;
     }
+    /*NORMAL*/
+    .normal {
+        box-shadow: 5px 5px 5px #D4AF37;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+    
+    .normal:hover {
+        box-shadow: 10px 10px 10px #D4AF37;
+        border-radius: 20px;
+        height: 310px;
+        width: 150px;
+    }
+    
+    /*PRO*/
+    .pro {
+        box-shadow: 5px 5px 5px #3fc4e9;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+    .pro:hover {
+        box-shadow: 10px 10px 10px #3fc4e9;
+        border-radius: 20px;
+        height: 310px;
+        width: 150px;
+    }
+    
+    /*PREMIUM*/
+    .premium {
+        box-shadow: 5px 5px 5px #ae52b0;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+    .premium:hover {
+        box-shadow: 10px 10px 10px #ae52b0;
+        border-radius: 20px;
+        height: 310px;
+        width: 150px;
+    }
 }
 
